welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
	if ( a%5==0 && a%3==0 ) {
		"Fizz Buzz"
	else {""+a }
	}
	if ( a%3==0) {
		"Fizz"
	else {""+a }
	}
	if ( a%5==0) {
		"Buzz"
	}
	else{""+a }
}
